--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> </head>
-    <body></body>
+    <head>
+        <style>
+            .chuj_mnie_strzeli {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                /* width: 500px;
+                height: 400px; */
+            }
+        </style>
+    </head>
+    <body>
+    </body>
 </html>
