Add refresh button

--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
             height: 100vh;
         }
         .in_border {
-            border: 1px white solid;
+            border: 3px white solid;
         }
         .column {
             display: flex;
@@ -35,6 +35,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-evenly;
+        }
+        .to_the_right_inside_flex {
+            display: flex;
+            align-self: flex-end;
+            position: fixed;
         }
         .row {
             display: flex;
