--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
         .to_the_right_inside_flex {
             display: flex;
             align-self: flex-end;
-            position: fixed;
+            position: absolute;
         }
         .row {
             display: flex;
