Continue minor improvements

--- a/website/index.html
+++ b/website/index.html
@@ -29,6 +29,9 @@
         .in_border {
             border: 3px white solid;
         }
+        .curly_border {
+            border-radius: 10px;
+        }
         .column {
             display: flex;
             height: 100%;
