--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
         body {
             background-color: black;
             color: white;
+            font-size: 0.8rem;
         }
         #url_frame {
             width: 90%;
@@ -27,7 +28,7 @@
             height: 100vh;
         }
         .in_border {
-            border: 3px white solid;
+            border: 3px rgb(14, 56, 65) solid;
         }
         .curly_border {
             border-radius: 10px;
