--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
             background-color: black;
             color: white;
             font-size: 0.8rem;
+            font-family: sans-serif;
         }
         #url_frame {
             width: 90%;
