--- a/website/index.html
+++ b/website/index.html
@@ -22,11 +22,14 @@
             justify-content: start;
             /* flex: 90 0 100px; */
         }
+        #queue_preview_frame {
+            min-height: 70vh;
+        }
         #input_frame {
             width: 90%;
         }
         #top_frame {
-            height: 100vh;
+            min-height: 100vh;
         }
         .in_border {
             border: 3px rgb(14, 56, 65) solid;
@@ -39,7 +42,7 @@
             height: 100%;
             flex-direction: column;
             align-items: center;
-            justify-content: space-evenly;
+            /* justify-content: space-evenly; */
         }
         .to_the_right_inside_flex {
             display: flex;
