--- a/website/index.html
+++ b/website/index.html
@@ -34,6 +34,9 @@
         .in_border {
             border: 3px rgb(14, 56, 65) solid;
         }
+        .in_padding {
+            padding: 10px;
+        }
         .curly_border {
             border-radius: 10px;
         }
