--- a/website/index.html
+++ b/website/index.html
@@ -34,6 +34,9 @@
         .in_border {
             border: 3px rgb(14, 56, 65) solid;
         }
+        .nice_background {
+            background-color: rgba(14, 56, 65, 0.26);
+        }
         .in_padding {
             padding: 10px;
         }
