--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,26 @@
             font-size: 0.8rem;
             font-family: sans-serif;
         }
+        button {
+            background-color: black;
+            color: white;
+            font-size: 1.0rem;
+            font-family: sans-serif;
+            border-style: ridge;
+            border-color:rgb(14, 56, 65);
+            background-color: rgba(14, 56, 65, 0.4);
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: rgba(14, 56, 65, 0.6);
+        }
+        button:active {
+            background-color: rgba(14, 56, 65, 0.8);
+        }
+        input {
+            background-color: rgb(20, 81, 95);
+            color:rgb(55, 218, 255);
+        }
         #url_frame {
             width: 90%;
             /* flex: 0 0 100px; */
@@ -64,6 +84,9 @@
             /* padding: 10px; */
             margin: 10px;
         }
+        /* .song_info {
+
+        } */
     </style>
 </head>
 
