--- a/website/index.html
+++ b/website/index.html
@@ -48,6 +48,9 @@
         #input_frame {
             width: 90%;
         }
+        #bottom_frame {
+            width: 90%;
+        }
         #top_frame {
             min-height: 100vh;
         }
