Center text at the bottom

--- a/website/index.html
+++ b/website/index.html
@@ -50,6 +50,7 @@
         }
         #bottom_frame {
             width: 90%;
+            text-align: center;
         }
         #top_frame {
             min-height: 100vh;
